# CrossHatchEditor

./: .gitignore  CMakeLists.txt  Camera.h  CrossHatchEditor.cpp  CrossHatchEditor.h  InputManager.cpp  InputManager.h  Instance.h  Light.h  Logger.cpp  Logger.h  MeshLoader.cpp  MeshLoader.h  ObjLoader.cpp  ObjLoader.h  PrimitiveObjects.h  README.md  SceneIO.cpp  SceneIO.h  TextRenderer.cpp  TextRenderer.h  VideoPlayer.h  altmainloop.txt  imgui.ini
baseshaders/: ch_frag1.sc  ch_frag1.sc.bak  crosshatching_frag_variant1.sc  varying.def.sc
bgfx-imgui/: imgui_impl_bgfx.cpp
enc_temp_folder/234b9d3248911afd8923ab69b7d16930/: InputManager.cpp
meshes/car-low-poly/: car-low-poly.gltf  license.txt
meshes/door2/: door2.gltf  license.txt
meshes/lamp-post-low-poly/: lamp-post-low-poly.gltf  license.txt
meshes/motorcycle/: license.txt  motorcycle.gltf
meshes/muscle-car/: license.txt
meshes/phone-booth/: license.txt  phone-booth.gltf
meshes/stylized-wolf/: stylized-wolf.gltf
meshes/tv-retro/: license.txt  tv-retro.gltf
noise textures/: noise1.dds  noise10.dds  noise11.dds  noise2.dds  noise3.dds  noise4.dds  noise5.dds  noise6.dds  noise7.dds  noise8.dds  noise9.dds
saves/: scene1.txt  scene1_imp_obj_map.txt  scene2.txt  scene2_imp_obj_map.txt  scene3.txt  scene3_imp_obj_map.txt  scene4.txt  scene4_imp_obj_map.txt  scene5.txt  scene5_imp_obj_map.txt
shaders/: Asphalt 1.dds  Dirt 1.dds  Grass 1.dds  Rocks 1.dds  Stone 1.dds  Stone 2.dds  Tile 1.dds  Wood 1.dds  Wood 2.dds  f_comic.sc  f_out1_shadow.sc  f_out26.sc  f_out27.sc  f_out28.sc  f_text.sc  fragment_shader.sc  fs_picking_id.sc  fs_shadow.sc  fs_shadow_pd.sc  texture1.dds  texture2.dds  texture3.dds  v_comic.sc  v_out1_shadow.sc  v_out1_shadow_test.sc  v_text.sc  varying.def.sc  vertex_shader.sc  vs_picking_shaded.sc  vs_shadow.sc  vs_shadow_pd.sc
textures/: Food 1.dds  Glass 1.dds  Leaves 1.dds
